--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: rgb(30, 30, 30);
+    background-color: #1e1e1e;
     height: 100vh;
     width: 100%;
     position: relative;
